# usp-fcfrp-introducao-a-ciencia-de-dados

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: lab.ipynb
