[tool.poetry]
name = "datascience-slim"
version = "0.1.0"
description = "Template for Data Science projects"
authors = ["Lucas Vidor Migotto <lvmigotto1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
fastai = "^2.7.15"
fastkaggle = "^0.0.8"
gradio = "^4.37.2"
graphviz = "^0.20.3"
ipywidgets = "^8.1.3"
kaggle = "^1.6.14"
nbdev = "^2.3.25"
plotly = "^5.22.0"
prince = "^0.13.0"
polars = "^1.1.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
sympy = "^1.13.0"
tensorflow = "^2.16.2"
timm = "^1.0.7"
torch = "^2.3.1"
torchvision = "^0.18.1"
transformers = "^4.42.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
